objects/Account.object
<CustomObject>
    <fields>
        <fullName>Adresse_Cour_Pays_WF__c</fullName>
        <formula>IF(  CodePays__c  &lt;&gt; &quot;&quot;,  CodePays__r.Name  , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse Cour Pays WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Etat1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse courante: Etat</label>
        <referenceTo>Etat__c</referenceTo>
        <relationshipLabel>Comptes</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_Etat_WF__c</fullName>
        <formula>IF(  Adresse_facturation_Etat1__c &lt;&gt; &quot;&quot;,   Adresse_facturation_Etat1__r.Name   , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse Etat WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Facturation_Rue__c</fullName>
        <label>Adresse Facturation: Rue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Pays_WF__c</fullName>
        <formula>IF( Adresse_facturation_Pays__c  &lt;&gt; &quot;&quot;,  Adresse_facturation_Pays__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse Pays WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Rue__c</fullName>
        <label>Adresse courante: Rue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_Ville__c</fullName>
        <label>Adresse courante: Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_courante_concatenee__c</fullName>
        <description>Champ récapitulant l&apos;adresse courante, utilisée pour le mini page layout</description>
        <formula>Adresse_Rue__pc &amp;&quot; &quot;&amp;  Rue_2__c &amp;&quot; &quot;&amp; Ligne_3__c &amp;&quot; &quot;&amp; Adresse_code_postal__pc &amp;&quot; &quot;&amp;  Adresse_Ville__pc &amp;&quot; &quot;&amp; R_gion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse courante concaténée</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_Code_Postal__c</fullName>
        <label>Adresse facturation: Code Postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_Etat1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse facturation: Etat</label>
        <referenceTo>Etat__c</referenceTo>
        <relationshipLabel>Comptes (Adresse facturation: Etat)</relationshipLabel>
        <relationshipName>Comptes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_Ligne_2__c</fullName>
        <label>Adresse facturation: Ligne 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_Ligne_3__c</fullName>
        <label>Adresse facturation: Ligne 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_NPAI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adresse facturation: NPAI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_Pays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse facturation: Pays</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Comptes (Adresse facturation: Pays)</relationshipLabel>
        <relationshipName>Comptes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_R_gion__c</fullName>
        <formula>IF(  Adresse_facturation_d_partement__c  &lt;&gt; Null,  Adresse_facturation_d_partement__r.Name  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse facturation: Région</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_d_partement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse facturation: département</label>
        <referenceTo>D_partement__c</referenceTo>
        <relationshipLabel>Comptes (Adresse facturation: département)</relationshipLabel>
        <relationshipName>Comptes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adresse_facturation_ville__c</fullName>
        <label>Adresse facturation: ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annee_validite__c</fullName>
        <description>L’année de la remise</description>
        <label>Année de validité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPT-AVA10</fullName>
                </value>
                <value>
                    <fullName>CPT-AVA20</fullName>
                </value>
                <value>
                    <fullName>CPT-AVA30</fullName>
                </value>
                <value>
                    <fullName>CPT-AVA40</fullName>
                </value>
                <value>
                    <fullName>CPT-AVA50</fullName>
                </value>
                <value>
                    <fullName>CPT-AVA60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_EML_3_derni_res_ann_es__c</fullName>
        <label>CA EML 3 dernières années</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_EML_ann_e_en_cours__c</fullName>
        <label>CA EML année en cours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Export__c</fullName>
        <label>CA Export (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Formation_continue__c</fullName>
        <label>CA EML réalisé (€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Inter_3_derni_res_ann_es__c</fullName>
        <label>dont CA Inter 3 dernières années</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Inter_ann_e_en_cours__c</fullName>
        <label>dont CA Inter année en cours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Intra_3_derni_res_ann_es__c</fullName>
        <label>dont CA Intra 3 dernières années</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Intra_ann_e_en_cours__c</fullName>
        <label>dont CA Intra année en cours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cessation_d_activit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ce champ permet de renseigner si la société à cesser son activité ou pas</description>
        <label>Cessation d&apos;activité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodeAPE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAF</label>
        <referenceTo>NAF__c</referenceTo>
        <relationshipLabel>Comptes</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeNAFProche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAF Activité réelle</label>
        <referenceTo>NAF__c</referenceTo>
        <relationshipLabel>Comptes (NAF)</relationshipLabel>
        <relationshipName>Comptes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodePays__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adresse courante: Pays</label>
        <referenceTo>Pays__c</referenceTo>
        <relationshipLabel>Comptes</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Compte__c</fullName>
        <description>Compteur compte tiers ( par workflow, on remplit le champ code agresso tiers société)</description>
        <displayFormat>9{000000}</displayFormat>
        <label>Code_Compte</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Code_NAF__c</fullName>
        <formula>CodeAPE__r.CODE_APE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code NAF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_NAICS__c</fullName>
        <label>Code NAICS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>31-33</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>44-45</fullName>
                </value>
                <value>
                    <fullName>48-49</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>81</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Postal__c</fullName>
        <label>Adresse courante: Code Postal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_tiers_societe__c</fullName>
        <description>Ce champ est automatiquement remplit par workflow depuis compteur compte</description>
        <label>Code tiers société</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commentaire_Taxe__c</fullName>
        <label>Commentaire Taxe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compte_Groupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compte Groupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compte_Principal_Rapport__c</fullName>
        <formula>IF(   ISBLANK(Parent.Name) ,   Name  ,
 IF(  ISBLANK( Parent.Parent.Name),Parent.Name,
 IF(  ISBLANK( Parent.Parent.Parent.Name),Parent.Parent.Name,Parent.Parent.Parent.Name
  )))</formula>
        <label>Compte principal Rapport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compte_a_valider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compte à valider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compte_consolidation_taxe_fundraising__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte principal taxe / fundraising</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comptes (Compte consolidation taxe / fundraising)</relationshipLabel>
        <relationshipName>Comptes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compte_principal_ID_RAPPORT__c</fullName>
        <formula>IF( ISBLANK(Parent.Name) , Id, 
IF( ISBLANK( Parent.Parent.Name),Parent.Id, 
IF( ISBLANK( Parent.Parent.Parent.Name),Parent.Parent.Id,Parent.Parent.Parent.Id 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compte principal ID RAPPORT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principal_Fundraising__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Principal Fundraising</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comptes</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat_cadre__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permet d’identifier si un compte a un contrat cadre avec EMLYON</description>
        <label>Contrat cadre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>CodePays__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pays</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumul_Intra__c</fullName>
        <label>Cumul CA Intra</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Accord de principe, Contrat Signé</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Intra-entreprises</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>9/1/2013</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>D_partement_pour_WF__c</fullName>
        <formula>IF( Adresse_facturation_d_partement__c &lt;&gt; &quot;&quot;,   Adresse_facturation_d_partement__r.Name  , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Département pour WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Util__c</fullName>
        <label>Data Loader Util</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_de_cr_ation_de_la_soci_t__c</fullName>
        <label>Date de création de la société</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Ce champ permet de sélectionner le libellé des départements</description>
        <label>Adresse courante: Département</label>
        <referenceTo>D_partement__c</referenceTo>
        <relationshipLabel>Comptes</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dernier_motif_de_refus__c</fullName>
        <description>Rempli par workflow lors de l’abandon de l’opportunité à partir du champ « motif de fermeture de l’opportunité » et ce a des fins de reporting</description>
        <label>Dernier motif de refus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donateur__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ancien intitulé du champ : &apos;Donateur&apos;. A été modifié à la demande de l&apos;EM Lyon (fiche 1535)</description>
        <label>Partenaire B2B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effectif_Cadre__c</fullName>
        <label>Effectif Cadre Groupe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effectif_Groupe__c</fullName>
        <label>Effectif Groupe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effectif_sur_la_France__c</fullName>
        <label>Effectif sur la France Groupe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Embauche_des_dipl_m_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embauche des diplômés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entit_g_rant_la_taxe_dans_un_groupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entité gérant la taxe dans un groupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entreprise_actuelle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entreprise actuelle</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts Individuels</relationshipLabel>
        <relationshipName>Comptes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entreprise_verseuse_ann_e_actuelle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entreprise verseuse année actuelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_un_OCTA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indique si ce compte est un OCTA</description>
        <label>Est un OCTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Mass_Update__c</fullName>
        <label>For Mass Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_FEG__c</fullName>
        <externalId>true</externalId>
        <label>ID FEG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indice_de_proximit__c</fullName>
        <label>Indice de proximité</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Skyline</fullName>
                </value>
                <value>
                    <fullName>Oxygène</fullName>
                </value>
                <value>
                    <fullName>Crayon</fullName>
                </value>
                <value>
                    <fullName>Incity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_r_t_M_cenat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intérets mécénat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Int_r_ts_sponsoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intérêts sponsoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libell_du_groupe__c</fullName>
        <label>Libellé du groupe</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ligne_3__c</fullName>
        <label>Adresse courante: Ligne 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_thode_de_saisie_des_Offres_sur_la_plat__c</fullName>
        <label>Méthode de saisie des Offres</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>manuel</fullName>
                </value>
                <value>
                    <fullName>mutliposting</fullName>
                </value>
                <value>
                    <fullName>iQuesta</fullName>
                </value>
                <value>
                    <fullName>autre agrégateur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPAI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adresse courante: NPAI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_TVA_intra_com__c</fullName>
        <inlineHelpText>Numéro TVA intra communautaire</inlineHelpText>
        <label>N° TVA intra com</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_d_activit_Forme_juridique__c</fullName>
        <label>Nature d’activité / Forme juridique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Privée</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fondation d’entreprise</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Publique</fullName>
                </value>
                <value>
                    <fullName>Entreprise Familiale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_car_Code_Postal__c</fullName>
        <description>Champ utilitaire Nb de caractères du code postal compte pour repérer les anomalies</description>
        <formula>LEN( Code_Postal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb car Code Postal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_Creation_Compte__c</fullName>
        <description>Resitue le nombre de jours écoulés depuis la création du compte. Utilisé pour les filtres dans les rapports.</description>
        <formula>Now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nb jours depuis Création Compte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_jours_depuis_Modification_Compte__c</fullName>
        <description>Restituer le nb de jours qui s&apos;est écoulé depuis la date de dernière modification du compte</description>
        <formula>Now() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Restituer le nb de jours qui s&apos;est écoulé depuis la date de dernière modification du compte</inlineHelpText>
        <label>Nb jours depuis Modification Compte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ne_pas_solliciter_pour_la_taxe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ne pas solliciter pour la taxe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Niveau_de_partenariat_groupe__c</fullName>
        <label>Niveau de partenariat groupe</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_commercial__c</fullName>
        <label>Nom commercial</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_opportunites__c</fullName>
        <label>Nombre opportunités du compte</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offre__c</fullName>
        <label>Offre Employeurs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance Careers Day</fullName>
                </value>
                <value>
                    <fullName>Luxury Careers Week</fullName>
                </value>
                <value>
                    <fullName>Careers Forum</fullName>
                </value>
                <value>
                    <fullName>Online Careers Days</fullName>
                </value>
                <value>
                    <fullName>Corporate Discovery Session</fullName>
                </value>
                <value>
                    <fullName>MBA Lounge</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurial Leadership Project</fullName>
                </value>
                <value>
                    <fullName>Grand Idea</fullName>
                </value>
                <value>
                    <fullName>In Company Project</fullName>
                </value>
                <value>
                    <fullName>European Human Resources Management</fullName>
                </value>
                <value>
                    <fullName>Expert Panel</fullName>
                </value>
                <value>
                    <fullName>Conférence Carrière Etudiants</fullName>
                </value>
                <value>
                    <fullName>Mock interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programme_de_reconnaissance__c</fullName>
        <label>Programme de reconnaissance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2C_Mont Blanc</fullName>
                </value>
                <value>
                    <fullName>B2B_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2C_Kilimandjaro</fullName>
                </value>
                <value>
                    <fullName>B2B_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2C_McKinley</fullName>
                </value>
                <value>
                    <fullName>B2B_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2C_Annapura</fullName>
                </value>
                <value>
                    <fullName>B2B_K2</fullName>
                </value>
                <value>
                    <fullName>B2C_K2</fullName>
                </value>
                <value>
                    <fullName>B2B_Everest</fullName>
                </value>
                <value>
                    <fullName>B2C_Everest</fullName>
                </value>
                <value>
                    <fullName>B2B_Cercle du Président</fullName>
                </value>
                <value>
                    <fullName>B2C_Cercle du Président</fullName>
                </value>
                <value>
                    <fullName>B2C_Contrepartie sur-mesure</fullName>
                </value>
                <value>
                    <fullName>B2B_Contrepartie sur-mesure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proportion_cadre__c</fullName>
        <label>Proportion cadre Groupe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prospect_Sponsoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect Sponsoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_donateur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect donateur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_gion__c</fullName>
        <formula>IF( Departement__c  &lt;&gt; Null,  Departement__r.R_gion__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adresse courante: Région</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recu_ERP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Champ qui sera rempli par le web service EMLYON pour définir les comptes tiers à envoyer vers à AGRESSO</description>
        <label>Recu ERP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remise_interentreprise__c</fullName>
        <description>Le % de remise définit dans le contrat cadre en fonction du chiffre d’affraies de l’exercice précédent, réalisé avec EMLYON</description>
        <label>Remise interentreprise</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rue_2__c</fullName>
        <label>Adresse courante: Ligne 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIREN__c</fullName>
        <label>SIREN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIRET__c</fullName>
        <label>SIRET</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoring__c</fullName>
        <description>Il définit le niveau de partenariat</description>
        <label>Scoring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPT-SCO10</fullName>
                </value>
                <value>
                    <fullName>CPT-SCO20</fullName>
                </value>
                <value>
                    <fullName>CPT-SCO30</fullName>
                </value>
                <value>
                    <fullName>CPT-SCO40</fullName>
                </value>
                <value>
                    <fullName>CPT-SCO50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secteur_d_activit__c</fullName>
        <formula>IF( CodeAPE__c  &lt;&gt; &quot;&quot;,  CodeAPE__r.Secteur__c , null)</formula>
        <label>Secteur d&apos;activité</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secteur_d_activit_proche__c</fullName>
        <formula>IF(  CodeNAFProche__c  &lt;&gt; &quot;&quot;,  CodeNAFProche__r.Secteur__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secteur d&apos;activité proche</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Soci_t_cr_e_par_un_dipl_m__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Société créée par un diplômé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Somme_Montant_Don__c</fullName>
        <label>Total généré don</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partenariat Fundraising</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Conclu</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Somme_des_versements_Annee_N_1__c</fullName>
        <label>Somme versements année N-1</label>
        <summarizedField>Versement_OCTA__c.Montant_net__c</summarizedField>
        <summaryFilterItems>
            <field>Versement_OCTA__c.Exercice_Collecte__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </summaryFilterItems>
        <summaryForeignKey>Versement_OCTA__c.Compte_Versement_OCTA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Somme_versement_annee_en_cours__c</fullName>
        <label>Somme versements année N</label>
        <summarizedField>Versement_OCTA__c.Montant_net__c</summarizedField>
        <summaryFilterItems>
            <field>Versement_OCTA__c.Exercice_Collecte__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryForeignKey>Versement_OCTA__c.Compte_Versement_OCTA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>